--- a/2358873_MayankBaryal_history.html
+++ b/2358873_MayankBaryal_history.html
@@ -11,10 +11,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.10/css/weather-icons.min.css"
-    />
 </head>
 <body>
        <!-- Navigation bar -->
@@ -24,11 +20,11 @@
     <main>
         <!-- Heading -->
         <div class="heading"></div>
-        <!-- Old records -->
+        <!-- History records -->
         <div class="oldData"></div>
     </main>
     <div>
-        <!-- Go back button -->
+        <!--History button -->
         <button class="goBack">Home</button>
     </div>
     <!-- Footer -->
